force-app/main/default/objects/Trip_Mbrs__c/Trip_Mbrs__c.object-meta.xml
<CustomObject>
    <label>Trip Member</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Trip Mbrs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>