force-app/main/default/objects/Trip_Mbrs__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <formula>Member_of_trip__r.Name</formula>
    <label>Member Name11</label>
    <type>Text</type>
</CustomField>