force-app/main/default/objects/Trip_Mbrs__c/fields/Member_of_trip__c.field-meta.xml
<CustomField>
    <fullName>Member_of_trip__c</fullName>
    <label>Member of trip</label>
    <referenceTo>Member_of_trip__c</referenceTo>
    <relationshipLabel>Trip Member</relationshipLabel>
    <relationshipName>Trip_Member</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>